# Text-Editor

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
algo/: lcs.cpp  leven.cpp  wunsh.cpp
algo/test_algo/: changed_position.cpp  find.cpp  levenshtain.cpp  wunsz.txt
cmake/: Docs.cmake  file1.txt  logic2.cpp  logic3.cpp
docs/: Doxyfile
docs/html/: CMakeLists_8txt.html  annotated.html  classMainWindow-members.html  classMainWindow.html  classMainWindow__coll__graph.map  classMainWindow__coll__graph.md5  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_c85d3e3c5052e9ad9ce18c6863244a25.html  dir_c85d3e3c5052e9ad9ce18c6863244a25_dep.map  dir_c85d3e3c5052e9ad9ce18c6863244a25_dep.md5  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  lcs_8cpp.html  lcs_8cpp__incl.map  lcs_8cpp__incl.md5  lcs_8h.html  lcs_8h__dep__incl.map  lcs_8h__dep__incl.md5  lcs_8h__incl.map  lcs_8h__incl.md5  lcs_8h_source.html  leven_8cpp.html  leven_8cpp__incl.map  leven_8cpp__incl.md5  leven_8h.html  (+30 more)
docs/html/search/: all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_c.js  all_d.js  all_e.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_8.js  variables_9.js
src/: CMakeLists.txt  lcs.cpp  leven.cpp  logic4.cpp  logic4.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/lib/: CMakeLists.txt  file1.txt  file2.txt  kod.cpp  lcs.cpp  lcs.h  leven.cpp  leven.h  logic.cpp  logic1.cpp  logic2  logic2.cpp  logic3  logic3.cpp  logic4  logic4 copy.cpp  logic4.cpp  logic4.h  logic5  logic5.cpp  makeChanges.cpp  makeChanges.h  testfile.txt
src/lib/algo/: wunsh.cpp
src/lib/algo/test_algo/: changed_position.cpp  levenshtain.cpp
tests/: CMakeLists.txt  my_test  run_test  run_tests  test.cpp
